--- a/src/Components/DashBoard/Pre-process.css
+++ b/src/Components/DashBoard/Pre-process.css
@@ -224,19 +224,22 @@
 
 .response {
   background-color: #f0f0f0;
-  padding: 0.625em;
+  padding: 1em;
   border-radius: 0.25em;
   box-shadow: 0 0.125em 0.25em rgba(0, 0, 0, 0.3);
   word-wrap: break-word;
   width: 31.25em;
   height: 26.25em;
+  line-height: 1.3;
+  color: #000925;
+  font-size: 16px;
 }
 
 .report {
   position: absolute;
-  top: 102%;
+  top: 88%;
   padding: 0.625em 1.25em;
-  margin-left: 83%;
+  margin-left: 63%;
   font-size: 1em;
   color: white;
   background-color: #000925;
@@ -248,6 +251,7 @@
   background-color: #ff8800;
   border: 0.0625em solid black;
 }
+
 
 .checkbox-group{
   display:grid;
@@ -352,7 +356,7 @@
       width: 60%;
       display: block;
       position: absolute;
-      top: 88.3em;
+      top: 21.3em;
   }
 
   .form-group input[type="text"],
