--- a/src/Components/DashBoard/Errorchecker.css
+++ b/src/Components/DashBoard/Errorchecker.css
@@ -76,7 +76,6 @@
 
 .errorcheck #newbut:hover {
     background-color: #ff8800; 
-    border: 1px solid black;
 }
 
 .uploaded-images {
@@ -128,9 +127,54 @@
     background: #000925;
 }
 
-#err .report{
-    margin-top: 0px;
-}
+#err .response-container {
+    display: flex;
+    flex-direction: column; 
+    position: absolute;
+    margin-left: 50em;
+    top: 9.375em;
+    width: 31.25em;
+    height: auto; 
+    box-shadow: 0 0.25em 1.25em rgba(0, 0, 0, 0.8);
+    background: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    overflow-y: auto; 
+    overflow-x: hidden; 
+  }
+  
+  #err .response {
+    background-color: #f0f0f0;
+    padding: 1em;
+    border-radius: 0.25em;
+    box-shadow: 0 0.125em 0.25em rgba(0, 0, 0, 0.3);
+    word-wrap: break-word;
+    width: 31.25em;
+    height: 30.25em; 
+    line-height: 1.3;
+    color: #000925;
+    font-size: 16px;
+  }
+  
+ #err .report {
+    position: relative; 
+    align-self: flex-end; 
+    padding: 0.625em 1.25em;
+    font-size: 1em;
+    color: white;
+    background-color: #000925;
+    border-radius: 0.625em;
+    border: 0.0625em solid black;
+    margin-left: 62%;
+    margin-top: 4%;
+  }
+  
+ #err .report:hover {
+    background-color: #ff8800;
+    border: none;
+    border-bottom: 3px solid black;
+  }
+  
 
 @media all and (max-width: 375px), all and (max-width: 414px), all and (max-width: 430px) {
     .errorcheck {
