--- a/src/Components/DashBoard/Pre-process.css
+++ b/src/Components/DashBoard/Pre-process.css
@@ -41,7 +41,6 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  /* Remove justify-content to prevent centering and allow content to flow naturally */
   align-items: center;
   margin-left: 17.5em;
   padding-top: 10%;
@@ -52,8 +51,6 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   box-shadow: 0 0.25em 1.25em rgba(0, 0, 0, 0.8);
-
-  /* Adjust height to prevent content from exceeding the viewport */
   max-height: 120vh; /* 80% of the viewport height */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Prevent horizontal scrolling */
@@ -171,7 +168,7 @@
 
 #newbut[type="submit"]:hover:not(:disabled) {
   background-color: #ff8800;
-  border-bottom: 2px solid black;
+  border-bottom: 3px solid black;
 
 }
 
@@ -220,16 +217,18 @@
 
 .response-container {
   display: flex;
+  flex-direction: column; 
   position: absolute;
   margin-left: 50em;
-  height: auto; 
   top: 9.375em;
   width: 31.25em;
-  height: 31.6875em;
+  height: auto; 
   box-shadow: 0 0.25em 1.25em rgba(0, 0, 0, 0.8);
-  background: rgba(255, 255, 255, 0.7); 
-  backdrop-filter: blur(10px); 
+  background: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+  overflow-y: auto; 
+  overflow-x: hidden; 
 }
 
 .response {
@@ -239,30 +238,30 @@
   box-shadow: 0 0.125em 0.25em rgba(0, 0, 0, 0.3);
   word-wrap: break-word;
   width: 31.25em;
-  height: 26.25em;
+  height: 30.25em; 
   line-height: 1.3;
   color: #000925;
   font-size: 16px;
-  scroll-behavior: auto;
 }
 
 .report {
-  position: absolute;
-  top: 88%;
+  position: relative; 
+  align-self: flex-end; 
   padding: 0.625em 1.25em;
-  margin-left: 63%;
   font-size: 1em;
   color: white;
   background-color: #000925;
   border-radius: 0.625em;
   border: 0.0625em solid black;
+  margin-left: 62%;
+  margin-top: 4%;
 }
 
 .report:hover {
   background-color: #ff8800;
-  border: 0.0625em solid black;
+  border: none;
+  border-bottom: 3px solid black;
 }
-
 
 .checkbox-group{
   display:grid;
